Fixing overflow on preloader

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,7 +30,7 @@ body {
 	overflow-x: hidden;
 	margin: 0;
 	padding: 0;
-	.preloader-on {
+	&.preloader-on {
 		overflow: hidden;
 	}
 }
